# memories

./: .readthedocs.yml  LICENSE.txt  README  README.md  README.rst  memories.py  pyproject.toml  setup.cfg  setup.py  tempCodeRunnerFile.python  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  index.rst  memories.rst  modules.rst
docs/pages/: about.rst  contributing.rst  features.rst  getting-started.rst  usage.rst
memories/: __init__.py  border.py  divider.py  memories.py  meta.py  save_as.py  scrapbook.py
memories/html_templates/: template1.html
tests/: test.py  test_memories.py
tests/test_images/: image_credits.txt
