[metadata]
name = memories
version = 1.0.0
author = Viraj Thakkar
author_email = vdthakkar111@gmail.com
description = A library for those who want to convert their older images into digitised format (with metadata), and beautify them using borders and other options.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/veedata/memories
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = memories
packages = find:
python_requires = >=3.6

[options.packages.find]
where = memories

[tox]
envlist = py35, py36, py37, py38, py39

[gh-actions]
python =
    3.5: py35
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
commands =
    python -m unittest discover
